# ranked-choice-voting

./: Cargo.toml  flake.nix  rust-toolchain.toml
compute-rcv/: Cargo.toml
compute-rcv/benches/: bench.rs
compute-rcv/src/: lib.rs  main.rs
data-reformatter/: Cargo.toml
data-reformatter/src/: main.rs
excel-parser/: Cargo.toml
excel-parser/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
