[package]
name = "compute-rcv"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { path = "../types" }
fnv = "1.0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "compute-rcv"
path = "src/main.rs"
